# loco-admin

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  react-router.config.ts  scheduler.example.yaml  tsconfig.json  vite.config.ts
app/: app.css  root.tsx  routes.ts
app/components/: ui.tsx
app/lib/: db.server.ts  env.server.ts  format.ts  jobs.server.ts  scheduler.server.ts
app/lib/metrics/: collect.server.ts  prometheus.ts
app/lib/servers/: kubernetes-resolver.ts  registry.server.ts  static-resolver.ts  types.ts
app/routes/: home.tsx  job-detail.tsx  jobs.tsx  scheduler.tsx  servers.tsx
config/: development.yaml  test.yaml
db/: schema.sql
examples/: playground.rs
frontend/: package-lock.json  package.json  rsbuild.config.ts
frontend/src/: Layout.tsx  api.ts  format.ts  index.css  index.tsx  router.tsx  ui.tsx
frontend/src/pages/: JobDetail.tsx  Jobs.tsx  Overview.tsx  Scheduler.tsx  Servers.tsx
scripts/: seed.ts
src/: app.rs  lib.rs  queue.rs  scheduler_config.rs  servers.rs
src/controllers/: jobs.rs  mod.rs  scheduler.rs  servers.rs
src/fixtures/: users.yaml
src/tasks/: user_create.rs
tests/models/: users.rs
tests/requests/: auth.rs  prepare_data.rs
tests/requests/snapshots/: login_with_valid_password@auth_request.snap.new
tests/tasks/: user_create.rs
