[workspace]

[package]
name = "loco_admin"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "loco_admin-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { git = "https://github.com/buildcollab/loco", rev = "2bdd18920d64d0f2962ee3cc362e25ae0add033c" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# loco-rs pulls jsonwebtoken without a crypto provider, so signing/verifying JWTs
# panics at runtime. Enable the pure-Rust provider (feature-unified onto the
# shared crate) so exactly one provider is active.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "2.0.0-rc.19", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-json",
  "with-chrono",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
axum-extra = { version = "0.10", features = ["form"] }
# Servers console: fetch health/metrics from other Loco servers.
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
futures = { version = "0.3" }
# Scheduler console: parse scheduler.yaml + project cron runs.
serde_yaml = { version = "0.9" }
cron = { version = "0.12" }

[[bin]]
name = "loco_admin-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
